# Hardt

./: .gitignore  CMakeLists.txt  Doxyfile.in  FindHardt.cmake  HardtConfig.cmake.in  Readme.md  Todo.txt  hardt.pc.in  publish.sh
hardt/dspcmd/: CMakeLists.txt  config.cpp  dspcmd.cpp  dspcmd.h  operations.cpp  signalhandling.cpp
hardt/dspcmd/include/: config.h
hardt/examples/: CMakeLists.txt
hardt/examples/network/: CMakeLists.txt  network.cpp
hardt/examples/readers_and_consumers/: CMakeLists.txt  readers_and_consumers.cpp
hardt/examples/readers_and_writers/: CMakeLists.txt  readers_and_writers.cpp
hardt/examples/saq/: CMakeLists.txt  saq.cpp
hardt/examples/simple/: CMakeLists.txt  simple.cpp
hardt/libhardt/: CMakeLists.txt  hardt.cpp  hardt.h.in  hexceptions.cpp  hobject.cpp  hprocessor.cpp  hrtl2832.cpp  htimer.cpp  hwav.cpp
hardt/libhardt/components/: hcollector.cpp  hdecimator.cpp  hdemux.cpp  hfirdecimator.cpp  hinterpolator.cpp  hiqdecimator.cpp  hiqfirdecimator.cpp  hmux.cpp  hswitch.cpp
hardt/libhardt/converters/: hcomplexconverter.cpp  hiq2absconverter.cpp  hiq2realconverter.cpp  hiqaddorsubtractconverter.cpp  hreal2iqconverter.cpp  htypeconverter.cpp
hardt/libhardt/filters/: hagc.cpp  hbaseband.cpp  hbreaker.cpp  hclickremovingfilter.cpp  hcombfilter.cpp  hcomplexfilter.cpp  hdelay.cpp  hfade.cpp  hfilter.cpp  hfirfilter.cpp  hgain.cpp  hgaussianfilter.cpp  hiirfilter.cpp  hiqfirfilter.cpp  hiqtranslatebyfour.cpp  hiqtranslatebytwo.cpp  hmute.cpp  hpassthrough.cpp  hpassthroughfilewriter.cpp  htranslatebyfour.cpp  htranslatebytwo.cpp
hardt/libhardt/include/: hagc.h  hallpassbiquad.h  hardt.h.in  hardtapi.h  hardtlib.h  hbandpasskaiserbessel.h  hbandstopkaiserbessel.h  hbaseband.h  hbiquad.h  hbiquadfilter.h  hbreaker.h  hbufferedwriter.h  hcascadedbiquadfilter.h  hchunkwriter.h  hclickremovingfilter.h  hcollector.h  hcombfilter.h  hcommand.h  hcomplex2multiplexedconverter.h  hcomplexconverter.h  hcomplexfilter.h  hconverter.h  hcosinegenerator.h  hcustomwriter.h  hdecimator.h  hdelay.h  hdemux.h  hexceptions.h  hfade.h  hfft.h  hfftoutput.h  hfilereader.h  hfilewriter.h  hfilter.h  hfilterbase.h  hfir.h  hfirdecimator.h  hfirfilter.h  hgain.h  hgaussianfilter.h  (+76 more)
hardt/libhardt/mixers/: hiqmultiplier.cpp  hlinearmixer.cpp  hmultiplier.cpp  hsubtracter.cpp
hardt/libhardt/outputs/: hfftoutput.cpp  hgoertzelfilter.cpp  hgoertzeloutput.cpp  hsignallevel.cpp  hsignalleveloutput.cpp
hardt/libhardt/processors/: hnetworkprocessor.cpp  hstreamprocessor.cpp
hardt/libhardt/readers/: hfilereader.cpp  hnetworkreader.cpp  hnullreader.cpp  hrtl2832reader.cpp  hsoundcardreader.cpp  hwavreader.cpp
hardt/libhardt/writers/: hbufferedwriter.cpp  hchunkwriter.cpp  hdemux.cpp  hfilewriter.cpp  hnetworkwriter.cpp  hsoundcardwriter.cpp  hsplitter.cpp  hwavwriter.cpp
hardt/test/: CMakeLists.txt  hagc_test.cpp  hardt_test.cpp  hbaseband_test.cpp  hbiquads_test.cpp  hbreaker_test.cpp  hbufferedwriter_test.cpp  hcascadedbiquadfilter_test.cpp  hchunkwriter_test.cpp  hclickremovingfilter_test.cpp  hcollector_test.cpp  hcombfilter_test.cpp  hcomplex2multiplexedconverter_test.cpp  hcomplexconverter_test.cpp  hcomplexfilter_test.cpp  hconverter_test.cpp  hcosinegenerator_test.cpp  hdecimator_test.cpp  hdelay_test.cpp  hdemux_test.cpp  hfft_test.cpp  hfftoutput_test.cpp  hfilereader_test.cpp  hfilewriter_test.cpp  hfilter_test.cpp  hfirdecimator_test.cpp  hfirfilter_test.cpp  hgain_test.cpp  hgaussianfilter_test.cpp  hgenerator_test.cpp  hgoertzelfilter_test.cpp  hgoertzeloutput_test.cpp  hhilbertfilter_test.cpp  hhumfilter_test.cpp  hiirfilter_test.cpp  hinputwriter_test.cpp  hinterpolator_test.cpp  hiq2absconverter_test.cpp  hiq2iconverter_test.cpp  hiq2qconverter_test.cpp  (+42 more)
scripts/: iq-am.sh  (+5 more)
src/dspcmd/: CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  dspcmd  dspcmd.cpp  dspcmd.h  operations.cpp  signalhandling.cpp
src/dspcmd/include/: config.h  operations.h  signalhandling.h
src/hardt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generator.cpp  hardt.cpp  hardt.h  hardt.h.in  hardt.pc  hbiquad.cpp  hexceptions.cpp  hgenerator.cpp  hobject.cpp  hprocessor.cpp  hsoundcard.cpp  htimer.cpp  hwav.cpp  samplegenerator.cpp
src/hardt/converters/: hconverter.cpp  hfft.cpp
src/hardt/filters/: hcombfilter.cpp  hfade.cpp  hfilter.cpp  hfirfilter.cpp  hgain.cpp  hiirfilter.cpp
src/hardt/include/: generator.h  hallpassbiquad.h  hardtapi.h  hardtlib.h  hbandpassbiquad.h  hbiquad.h  hbiquadfactory.h  hbiquadfilter.h  hcascadedbiquadfilter.h  hchunkwriter.h  hcombfilter.h  hconverter.h  hcosinegenerator.h  hcustomwriter.h  hdemux.h  hexceptions.h  hfade.h  hfft.h  hfilereader.h  hfilewriter.h  hfilter.h  hfilterbase.h  hfirfilter.h  hgain.h  hgenerator.h  hgoertzelfilter.h  hhahnwindow.h  hhammingwindow.h  hhighpassbiquad.h  hhighshelvingbiquad.h  hhumfilter.h  hiirfilter.h  hlinearmixer.h  hlocaloscillator.h  hlowpassbiquad.h  hlowpasscombfilter.h  hlowshelvingbiquad.h  hmetrics.h  hmultiplier.h  hmux.h  (+30 more)
src/hardt/outputs/: hfft.cpp  hgoertzelfilter.cpp  hsignallevel.cpp
src/hardt/processors/: hnetworkprocessor.cpp  hprocessor.cpp  hstreamprocessor.cpp
src/hardt/readers/: hcosinegenerator.cpp  hfilereader.cpp  hmux.cpp  hnetworkreader.cpp  hreader.cpp  hsinegenerator.cpp  hsoundcardreader.cpp  hwavreader.cpp
src/test/: CMakeLists.txt  Makefile  cmake_install.cmake  generator_test.cpp  hardt_test  hbiquads_test.cpp  hchunkwriter_test.cpp  hcombfilter_test.cpp  hconverter_test.cpp  hcosinegenerator_test.cpp  hdemux_test.cpp  hfft_test.cpp  hfilereader_test.cpp  hfilewriter_test.cpp  hfilter_test.cpp  hgain_test.cpp  hgenerator_test.cpp  hgoertzelfilter_test.cpp  hhahnwindow_test.cpp  hhammingwindow_test.cpp  hiirfilter_test.cpp  hmux_test.cpp  hnetwork_test.cpp  hnullwriter_test.cpp  houtput_test.cpp  hrectangularwindow_test.cpp  hsignallevel_test.cpp  hsinegenerator_test.cpp  hsplitter_test.cpp  hstreamprocessor_test.cpp  hvfo_test.cpp  hwavreader_test.cpp  hwavwriter_test.cpp  hwindow_test.cpp  hwriterconsumer_test.cpp  test.cpp  test.h
(+52 files in other folders)
